each volume gets a unique nsfr_id

Introduced (via calibre Options) a boolean to expand or not the publisher
field. Now, publisher contains publisher§collection name€serial code. § and €
used because very low probability to exist. Metadata bulk edit created to
help push the data to the right place.

Introduced (via calibre Options) a number to select the debug level

Introduced (via calibre Options) a choice to select how to push the priority
to get oldest or latest with or without preference over volume with ISBN.
Caution, this still choose the most verbose comments.

Introduced (via calibre Options) a string box. Filled with the (exact!!)
publisher name, it pushes priority to give a match on publisher name... Yes,
I know that the collection may still be wrong. The only way is to change the
nsfr_id to reflect what volume of the book we really want (the number,
including the sign if any, after the equal sign should show up glued to the
vl$<number>) and restart the metadata download.

Pushed to version 0,7,0 after refactoring some code to become function instead
of method...

Corrected instructions cause some volume have no value for coll_rsl, yet they
have a value for collection...

noosfere site changed.. so I had to adapt the plugin.. and correct some minors
bugs.. this mark version 0.9.0

add a conditional on title and authors... If a book has an nsfr_id or an isbn,
then author and/or title may be None...

Corrected a few (read quite a few... understand a lot) of comments. They are
more correct, more coherent... well, better...

It, from now on, extract the information about other editions... The first line
(a link) points to the pages of all the various volumes. The rest of the
information is a series of links to the volumes sorted by date and by editor.

Implemented the collect of "conseil de lecture" and Adaptation (of the book to
other media: tv, film...)
This still needs to be made optional before version 1